# kafka-connector

./: Cargo.toml  Cross.toml  README.md  bors.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-dev-kafka-sink.yaml  publish-dev-kafka-source.yaml  publish-kafka-sink.yaml  publish-kafka-source.yaml
crates/kafka-sink/: Cargo.toml  Connector.toml  README.md  config-example-ssl.yaml  config-example.yaml  secrets
crates/kafka-sink/hub/: package-meta.yaml
crates/kafka-sink/src/: config.rs  main.rs  sink.rs
crates/kafka-source/: Cargo.toml  Connector.toml  README.md  config-example.yaml
crates/kafka-source/hub/: package-meta.yaml
crates/kafka-source/src/: config.rs  main.rs  source.rs
docker/: aarch64-gnu-Dockerfile  aarch64-musl-Dockerfile  x86_64-musl-Dockerfile
