[workspace]
members = [
    "crates/kafka-sink",
    "crates/kafka-source",
]
resolver = "2"

[profile.release-lto]
inherits = "release"
lto = true


[workspace.dependencies]
async-trait = { version = "0.1", default-features = false}
futures = { version = "0.3", default-features = false }
anyhow = { version = "1.0" }
async-std = { version = "1.12",  default-features = false, features = ["attributes"]}
serde = { version = "1.0", default-features = false, features = ["derive"]}

fluvio = { git = "https://github.com/infinyon/fluvio", tag = "v0.10.8-dev-2"}
fluvio-connector-common = { git = "https://github.com/infinyon/fluvio", tag = "v0.10.8-dev-2", features = ["derive"]}

