[package]
name = "kafka-sink"
version = "0.4.0"
edition = "2021"
publish = false
license = "Apache 2.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "A Fluvio connector that sends records to Kafka"

[features]
cmake-build = ["rdkafka/cmake-build"]

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true  }
anyhow = { workspace = true }
async-std = { workspace = true }
serde = { workspace = true }
tempfile = { version = "3.3", default-features = false, features = [] }

rdkafka-sys = { version = "=4.3.0+1.6.1" }
rdkafka = { version ="0.27", features = ["libz-static", "tokio", "ssl-vendored"], default-features = false  }

fluvio = { workspace = true }
fluvio-connector-common = { workspace = true }
