[package]
name = "kafka-sink"
version = "0.4.0"
edition = "2021"
publish = false
license = "Apache 2.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "A Fluvio connector that sends records to Kafka"

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true  }
anyhow = { workspace = true }
async-std = { workspace = true }
serde = { workspace = true }
tempfile = { version = "3.6", default-features = false, features = [] }

rdkafka-sys = { version = "4.5.0+1.9.2" }
rdkafka = { version ="0.33.2", features = ["libz-static", "tokio"], default-features = false  }
openssl = { version = "0.10", features = ["vendored"] }


fluvio = { workspace = true }
fluvio-connector-common = { workspace = true }

[target.aarch64-apple-darwin.dependencies]
rdkafka = { version ="0.32.2", features = ["libz-static", "tokio", "cmake-build"], default-features = false  }
