[package]
name = "kafka-sink"
version = "0.0.0"
edition = "2021"
publish = false
license = "Apache 2.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "A Fluvio connector that sends records to Kafka"

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true  }
anyhow = { workspace = true }
async-std = { workspace = true }
serde = { workspace = true }

tempfile = { version = "3.10", default-features = false, features = [] }

# Features `ssl` or `ssl-vendored` must be enabled explicitely, otherwise it fails runtime with enabled ssl.
# Before changing version make sure it compiles on *-unknown-linux-musl targets.
rdkafka-sys = { version = "=4.7.0+2.3.0" }
rdkafka = { version ="0.36", features = ["libz-static", "tokio", "ssl-vendored"], default-features = false  }

fluvio = { workspace = true }
fluvio-connector-common = { workspace = true }

[target.aarch64-apple-darwin.dependencies]
rdkafka = { version ="0.36", features = ["libz-static", "tokio", "cmake-build", "ssl-vendored"], default-features = false  }
